# SUEP_CLanguage_Homework

./: CMakeLists.txt  README.md
School_Test/c10/: c10-1-4.c  c10-1-5.c  c10-1-6.c  c10-2-1.c  c10-2-10.c  c10-2-11.c  c10-2-12.c  c10-2-13.c  c10-2-3.c  c10-2-5.c  c10-2-8.c  c10-3-1.c  score_avg.txt
School_Test/c11/: c11-1-1.c  c11-1-2.c
School_Test/c2/: c2-1-1.c  c2-1-10.c  c2-1-13.c  c2-1-14.c  c2-1-15.c  c2-1-2.c  c2-1-4.c  c2-1-7.c  c2-1-8.c
School_Test/c3/: c3-1-3.c  c3-1-4.c  c3-1-6.c  c3-1-9.c  c3-2-2.c  c3-2-3.c  c3-3-2.c  score.txt
School_Test/c4/: c4-1-3.c  c4-1-4.c  c4-2-1.c  c4-2-3.c  c4-2-4.c  c4-2-5.c  c4-2-6.c  c4-2-7.c  c4-2-8.c  c4-3-2.c  test.c
School_Test/c5/: c5-1-1.c  c5-2-1.c  c5-2-10.c  c5-2-11.c  c5-2-5.c  c5-2-6.c  c5-3-1.c  c5-3-2.c  red_packet.txt  score.txt
School_Test/c6/: c6-1-1.c  c6-1-2.c  c6-1-3.c  c6-1-4.c  c6-2-1.c  c6-2-10.c  c6-2-11.c  c6-2-6.c  c6-2-7.c  c6-2-8.c  c6-2-9.c  c6-3-2.c
School_Test/c7/: c7-1-1.c  c7-2-10.c  c7-2-3.c  c7-2-5.c  c7-2-8.c  c7-2-9.c
School_Test/c8/: c8-1-1.c  c8-2-1.c  c8-2-2.c  c8-2-4.c  c8-2-5.c  c8-3.c  score.txt
School_Test/c9/: c9-1-4.c  c9-2-1.c  c9-2-2.c  c9-2-3.c  c9-2-6.c  c9-2-7.c  c9-2-8.c  c9-3-1.c  学习笔记.txt  学习笔记2.txt
Self-Learn/chapter02/: 03_IntTest.c  04_FloatDoubleTest.c  07_valueConvert.c  08_ConstantTest.c  24_gotoTest.c  25_PointerFunctionTest.c
c10/: c10-1-1.c  c10-1-2.c  c10-1-3.c  c10-2-2.c  c10-2-3.c  c10-2-4.c  c10-2-6.c  c10-2-7.c  c10-2-9.c  c10-3-2.c
c11/: c11-1-1.c  c11-1-3.c  c11-1-4.c  c11-1-5.c  c11-1-6.c  c11-2-1.c  c11-2-2.c  c11-2-3.c  c11-2-4.c  c11-2-5.c  c11-3-1.c  order.txt
c12/: c12-1-1.c  c12-1-2.c  c12-1-3.c  c12-2-1.c  c12-2-2.c  c12-2-3.c  c12-2-4.c  c12-2-5.c  c12-2-6.c  c12-2-7.c  c12-2-8.c  c12-2-9.c  c12-3.c
c2/: c2-1-11.c  c2-1-12.c  c2-1-3.c  c2-1-5.c  c2-1-6.c  c2-1-9.c  hello.c
c3/: c3-1-1.c  c3-1-2.c  c3-1-5.c  c3-1-7.c  c3-1-8.c  c3-2-1.c  c3-2-3.c  c3-2-4.c  c3-2-5.c  c3-2-6.c  c3-3-1.c  score_avg.txt
c4/: c4-1-1.c  c4-1-2.c  c4-2-2.c  c4-2-5-1.c  c4-3-1.c
c5/: c5-1-2.c  c5-2-2.c  c5-2-3.c  c5-2-4.c  c5-2-7.c  c5-2-8.c  c5-2-9.c  c5-3-1.c  score_avg.txt
c6/: c6-2-2.c  c6-2-5.c  c6-3-1.c
c7/: c7-1-2.c  c7-2-1.c  c7-2-10.c  c7-2-11.c  c7-2-2.c  c7-2-4.c  c7-2-6.c  c7-2-7.c  c7-3.c
c8/: c8-1-2.c  c8-2-3.c  c8-2-6.c  c8-2-7.c
c9/: c9-1-1.c  c9-1-2.c  c9-1-3.c  c9-2-4.c  c9-2-5.c  c9-3-2.c  score.txt  score_avg.txt  使命与担当.txt  学习笔记1.txt
